Fixed app crash on Redimi and some Sony phones

--- a/DSIOfficial/app/src/main/res/layout/activity_choose_section.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_choose_section.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amit.dsiofficial.ChooseSectionActivity"
+    tools:context="com.studios.amit.dsiofficial.ChooseSectionActivity"
     android:orientation="vertical">
 
     <TextView
