--- a/DSIOfficial/app/src/main/res/layout/activity_about_us.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_about_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.amit.dsiofficial.AboutUsActivity">
+    tools:context="com.studios.amit.dsiofficial.AboutUsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
