--- a/DSIOfficial/app/src/main/res/layout/activity_notification_info.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_notification_info.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amit.dsiofficial.NotificationInfoActivity">
+    tools:context="com.studios.amit.dsiofficial.NotificationInfoActivity">
 
     <!--
     <Button
