--- a/DSIOfficial/app/src/main/res/layout/activity_splash_screen.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amit.dsiofficial.SplashScreen"
+    tools:context="com.studios.amit.dsiofficial.SplashScreen"
     app:theme="@style/Theme.AppCompat.Light.NoActionBar"
     android:background="#fff"
     >
