--- a/DSIOfficial/app/src/main/res/layout/content_about_us.xml
+++ b/DSIOfficial/app/src/main/res/layout/content_about_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.amit.dsiofficial.AboutUsActivity"
+    tools:context="com.studios.amit.dsiofficial.AboutUsActivity"
     tools:showIn="@layout/activity_about_us">
 
     <LinearLayout
