--- a/DSIOfficial/app/src/main/res/layout/fragment_book.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_book.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.amit.dsiofficial.NotificationFragment"
+    tools:context="com.studios.amit.dsiofficial.NotificationFragment"
     >
 
 <LinearLayout
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context="com.example.amit.dsiofficial.NotificationFragment"
+        tools:context="com.studios.amit.dsiofficial.NotificationFragment"
         android:orientation="vertical"
         >
 
