--- a/DSIOfficial/app/src/main/res/layout/fragment_notification.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_notification.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.amit.dsiofficial.NotificationFragment"
+        tools:context="com.studios.amit.dsiofficial.NotificationFragment"
         android:orientation="vertical"
         android:id="@+id/new_notif_linear_layout"
         >
