--- a/DSIOfficial/app/src/main/res/layout/fragment_timetable_cse5b.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_timetable_cse5b.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amit.dsiofficial.AboutUsActivity">
+    tools:context="com.studios.amit.dsiofficial.AboutUsActivity">
 
     <ScrollView
         android:id="@+id/layout"
