--- a/DSIOfficial/app/src/main/res/layout/fragment_timetable_cse5c.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_timetable_cse5c.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mataa.timetable.MainActivity">
+    tools:context="com.studios.mataa.timetable.MainActivity">
 
     <ScrollView
         android:id="@+id/layout"
