--- a/DSIOfficial/app/src/main/res/menu/menu_about_us.xml
+++ b/DSIOfficial/app/src/main/res/menu/menu_about_us.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.amit.dsiofficial.AboutUsActivity">
+    tools:context="com.studios.amit.dsiofficial.AboutUsActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
